# Learn

./: #links.txt#  .gitignore  Readme.md  guid.org  links.txt
Linux/Head_First_C/first/: CMakeLists.txt  bermuda  bermuda.c  gps.csv  main  main.c  someCode.txt
Linux/Head_First_C/second/: .spooky.csv.swn  .spooky.csv.swo  .spooky.csv.swp  CMakeLists.txt  aliens.csv  main  main.c  spooky.csv  the_rest.csv
Linux/Head_First_C/secr/: firstMess.txt  secret  secret.c  secret.txt
Linux/Let_us_C/Chapter_10/: dissimilar.c~  struct.c  struct.c~
Linux/Let_us_C/Chapter_11_12/: file  file.c~  file.txt  file.txt~  file1  file1.c  file1.c~  io.c  menu.c  new.txt
Linux/Let_us_C/Chapter_3/: CMakeLists.txt  exercise.c  main.c
Linux/Let_us_C/Chapter_4/: #main.c#  .#main.c  CMakeLists.txt  exercise.c  main.c
Linux/Let_us_C/Chapter_5/: factorial
Linux/Let_us_C/Chapter_7/: gccmain.i
Linux/Let_us_C/Chapter_8/: arr  arr.c
Linux/Let_us_C/Chapter_9/: lib  str  string.c  string.c~  strlib.c  strlib.c~  two
Linux/The_C_programming_language/Chapter_1/Chapter_1.2/: CMakeLists.txt  FahtoCel  FahtoCel.c  exercise_1.3  exercise_1.4  exercise_1_3.c  exercise_1_4.c
Linux/The_C_programming_language/Chapter_1/Chapter_1.3/: CMakeLists.txt  first.c  my_create.c
Linux/analog_wget/: wget.c
Linux/site_creator/: example.c  main.c  template.h
Linux/theaofcp/: euclid_al  euclid_al.c  euclid_al.c~  fibonacci  fibonacci.c  fibonacci.c~
Structure/: file.c  file.c~
Windows/first_vs/: first.sln
Windows/first_vs/Debug/: first.ilk
Windows/first_vs/first/: first.cpp  first.vcxproj  first.vcxproj.filters
algorithm/multithread_quicksort/: Makefile  common.c  m_quicksort.c  q_i_sort.c
algorithm/quick_insert_sort/: Makefile  common.c  quick.c
analog_wget/: wget.c~
bash/learn/begin/: mysystem.sh  property.sh  sysnotes.sh  variables.sh
bash/rename/: lowercase.sh  uppercase.sh
binary_tree/: tree_1.c  tree_2.c  tree_3.c  tree_4.c  tree_5.c  tree_6.c
bitw/ion/: Makefile  ast.c  common.c  inc.h  ion.c  lex.c  parse.c  print.c
bitw/ion/include/: ast.h  common.h  inc.h  ion.h  lex.h  parse.h  print.h
bitw/ion/other/: letters.c
bitw/scr_lang/: Makefile  lang.cpp
books/: list.txt
books/asm_for_beginners/hello/: gcc.asm  gcc_intel.asm  hello.c  msvc.asm
books/beginers/chapter_10/: game
books/beginers/chapter_11/: book
books/beginers/chapter_6/: ttt.c
books/beginners/chapter_10/: game.c
books/beginners/chapter_3/: rand.c
books/beginners/chapter_4/: memory.c
books/beginners/chapter_5/: trivia.c
books/beginners/chapter_7/: encr.c
books/beginners/chapter_8/: word.c
books/cftabmv/chapter_5/: trivia
books/let_us_c/Chapter_1/first/: CMakeLists.txt  func_for_io.h  just_for_fun.c  main.c
books/let_us_c/Chapter_3/: CMakeLists.txt  exe
books/let_us_c/Chapter_4/: CMakeLists.txt  exercise.c  main.c
csharp/quickstart/: Makefile  Program.cs
data_structures/linked_list/: l_list_1.c  l_list_2.c  l_list_3.c  l_list_4.c
factorial/: CMakeLists.txt  main.c
fibonacci/: CMakeLists.txt
first/: main  main.c
gtk/basic/: 1.c  2.c  3.c  4.c  4c_xml.glade  Makefile  call_make.sh
gtk/first_simple_app/: Makefile  app.c  app_xml.glade  example_app.c  example_app.gresource.xml  example_app.h  example_app_win.c  example_app_win.h
howto/ncurses/: 11.c  2.c  6.c  7.c  direct.txt
language/sl1/: lang.cpp
linear_lists/stack/: stack_1.c
linked_list/: l_list_1.c  l_list_2.c  l_list_3.c  l_list_4.c
ml/neural_net_cpp/: CMakeLists.txt  CMakeSettings.json  Makefile  gen_train_data.py  main.cpp
ml/neural_net_cpp/neural_net_cpp/: CMakeLists.txt  def.h  net.cpp  net.h  neural_net_cpp.cpp  neuron.cpp  neuron.h  train_data.cpp  train_data.h
ncurses/howto/: 10.c  11.c  12.c  16_1.c  16_2.c  16_3.c  16_4.c  17_1.c  17_2.c  17_3.c  17_4.c  17_5.c  17_6.c  17_7.c  18_1.c  18_2.c  18_3.c  18_4.c  4.c  8.c  9.c  9_1.c  Readme.md  direct.txt
ncurses/in_out_wins/: CMakeLists.txt  main.cpp
network/ip/: Makefile  address.c
network/port_scanner/: Makefile  inc.h  scanner.c  scanner.h
network/server_1/: Makefile  index.html  server.c
network/sock_raw/: Makefile  receiver.c  sender.c
opengl/glfw_get_start/: Makefile  win.cpp
opengl/learn_opengl/: CMakeLists.txt  main.cpp
opengl/learn_opengl/example/: ex1.cpp
opengl/learn_opengl/inc/: glfw.hpp  shader.hpp  sup.hpp  texture.hpp
opengl/learn_opengl/shader/: fragment.frag  shader.glsl  vertex.vert
opengl/learn_opengl/src/: glfw.cpp  main.cpp  shader.cpp  stb_image.cpp  sup.cpp  texture.cpp
opengl/some_opengl/: Makefile  step_1.cpp  step_2.cpp  step_3.cpp  win.cpp
opengl/some_opengl_win/: buffer.cpp  buffer.hpp  rend_sup.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  win.cpp
python/flask/: app.py  babel.cfg  config.py  env.bat  fill_database_test.py  main.py  tests.py
python/learn_pysimplegui/: main.py
python/learn_telegram_bot/: main.py  stock.py  support.py
python/learning_1/: backtest.py  compare_threading.py  event_dispatcher_1.py  main.py  work_with_data.py
python/pipenv_learn/: main.py
python/signals/: instrument.py  main.py  scraper.py  support.py
qt/app_1/: CMakeLists.txt  main.qml
qt/build-app_1-Desktop_Qt_5_11_1_GCC_64bit-Default/: CMakeCache.txt  Makefile  app_1  app_1.cbp  cmake_install.cmake
random/: crypt_word.c  ip_address.c  test_opengl.cpp
random/binary_stream/: .gitignore  Makefile  binary.cpp
random/some_random/: crypt_word.c  dec_to_bin.c  dynamic_array.c  ip_address.c  my_string.c  solo_learn.c  test_opengl.cpp
rust/sample/: Cargo.toml
sdl/map_unclear/: Makefile  README.md  main.c
site_creator/: CMakeLists.txt  main
site_creator/site/: index.html
text_editor/1_terminal_editor/: use_ioctl.c
web/fcc_build_servey_form/: index.html  main.css
web/learn_1/: gulpfile.js  index.pug  package.json
web/random_1/: index.html  main.css  main.js
winapi/begin/win_api_starting/: CMakeLists.txt  CMakeSettings.json  cl_bulid  resource.h  resources.h  resources.rc  win.cpp
wxw/hello/: CMakeLists.txt  app_win.cpp  main.cpp  main.h
x11/: intro_1.c
(+267 files in other folders)
